openmediavault (5.6.19-1) stable; urgency=low

  * Add 'WWN' column in disk and SMART devices pages. The column
    is hidden by default.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Nov 2021 13:58:59 +0100

openmediavault (5.6.18-2) stable; urgency=low

  * Issue #1119: Fix regression in 'Used' column of the file
    system table.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 28 Oct 2021 21:10:24 +0200

openmediavault (5.6.17-1) stable; urgency=low

  * Ignore device mapper devices when scanning for SMART
    capable devices.
  * Issue #1107: Fix bug when sorting the 'Used' column in the
    file system table.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Oct 2021 16:50:25 +0200

openmediavault (5.6.16-1) stable; urgency=low

  * Fix SMART issue when requesting information from a NVMe device.
  * Issue #1095: Fixed a bug when escaping the password in rsync
    shell scripts.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 14 Sep 2021 23:38:57 +0200

openmediavault (5.6.15-1) stable; urgency=low

  * Set correct time zone in proftpd.
  * Skip missing file systems when applying quotas.
  * Do not show used devices, e.g. that of a BTRFS RAID, in the file
    system creation dialog.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 26 Aug 2021 18:39:49 +0200

openmediavault (5.6.14-1) stable; urgency=low

  * Issue #1079: Clear out the local repository of retrieved package
    files to fix the "... InRelease' changed its 'Suite' value from
    'stable' to 'oldstable'" message.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Jul 2021 18:17:05 +0200

openmediavault (5.6.13-1) stable; urgency=low

  * Issue #986: Divert files modified by openmediavault to prevent
    problems when package updates want to override them.
  * Issue #1058: Disable SMTPUTF8 support in Postfix. This extension
    seems not supported by all email providers. Use the environment